src/test/ImmutableFail/ImmutableFail.expected
error: ImmutableFail.panda:4:9: immutable class 'ImmutableFail' has mutable field 'array' (panda.collections.Array<panda.core.Char>)
1 error
