src/test/ImmutableFail/ImmutableFail.panda
class ImmutableFail : Immutable {
    var a := "String"
    var i := 48
    var array := new Array<Char>("H", "e", "l", "l", "o")

    @class
    method main() {
        Console.writeLine("can't happen")
    }
}